# squadpad

./: .gitignore  README.md  netlify.toml  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
docs/: PROTOCOL.md  architecture.html
docs/plans/: 2026-03-05-bombpad-design.md  2026-03-05-bombpad-implementation.md  2026-03-05-launch-session-log.md  2026-03-05-player-ux-improvements-design.md  2026-03-05-squadpad-full-launch-plan.md  2026-03-06-ux-redesign-design.md  2026-03-06-ux-redesign-implementation.md
native/: app.json  eas.json  package-lock.json  package.json
native/app/: _layout.tsx  controller.tsx  index.tsx  settings.tsx
native/modules/expo-gamepad/: expo-module.config.json  index.ts
native/modules/expo-udp/: expo-module.config.json  index.ts
native/src/components/: ActionButton.tsx  ActionButtons.tsx  BentoCard.tsx  ControllerHud.tsx  (+9 more)
relay/: Dockerfile  fly.toml  package-lock.json  package.json  server.js
src/: host.html  index.html  manifest.json  privacy.html  robots.txt  sitemap.xml  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  protocol.rs  relay_client.rs  state.rs  udp_client.rs  websocket_server.rs
src/css/: style.css
src/js/: connection.js  controller.js  dashboard.js  protocol.js  ui.js
tests/: connection.test.js  protocol.test.js  relay.test.js
web/: package-lock.json
web/src/: host.html
web/src-tauri/: Cargo.toml  tauri.conf.json
web/tests/: connection.test.js  controller.test.js  relay.test.js
(+36 files in other folders)
