[package]
name = "squadpad"
version = "0.3.0"
edition = "2021"

[lib]
name = "squadpad_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "sync", "time", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = { version = "0.3", features = ["sink"] }
rand = "0.8"
local-ip-address = "0.6"
